Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,5 @@ Imports:
     tibble,
     tidyr,
     utils
+URL: https://github.com/selkamand/sigminerUtils
+BugReports: https://github.com/selkamand/sigminerUtils/issues
