--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: sigminerUtils
-Title: What the Package Does (One Line, Title Case)
+Title: Utilities for Running Signature Analysis using Sigminer
 Version: 0.0.0.9000
 Authors@R: 
     person("Sam", "El-Kamand", , "selkamand@ccia.org.au", role = c("aut", "cre"),
            comment = c(ORCID = "https://orcid.org/0000-0003-2270-8088"))
-Description: What the package does (one paragraph).
+Description: A collection of utilities for running signature analysis with sigminer. 
+    Results are stored in a sqlite database and indexed for downstream analysis.
 License: MIT + file LICENSE
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Imports: 
     cli,
     DBI,
@@ -20,7 +21,7 @@ Imports:
     readr,
     rlang,
     RSQLite,
-    sigminer,
+    sigminer (>= 2.2.1),
     tibble,
     tidyr,
     utils
