--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,16 +14,23 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
+    assertions,
     cli,
     DBI,
     dplyr,
     glue,
+    purrr,
     readr,
     rlang,
     RSQLite,
     sigminer (>= 2.2.1),
+    sigstash,
+    sigstats,
     tibble,
     tidyr,
     utils
+Remotes:
+    selkamand/sigstash,
+    selkamand/sigstats
 URL: https://github.com/selkamand/sigminerUtils
 BugReports: https://github.com/selkamand/sigminerUtils/issues
