fix: drastic speedup of pairwise cosine similarity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,5 @@
 export(sig_add_to_database)
 export(sig_analyse_mutations)
 export(sig_create_database)
+export(sig_pairwise_similarity)
 importFrom(rlang,`%||%`)
