feat: added copynumber support

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,13 +20,12 @@ Imports:
     dplyr,
     future,
     glue,
-    purrr,
+    lsa,
     readr,
     rlang,
     RSQLite,
     sigminer (>= 2.2.1),
     sigstash,
-    sigstats,
     tibble,
     tidyr,
     utils
