feat: added post-run parsing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(sig_analyse_mutations_single_sample_from_files)
 export(sig_create_database)
 export(sig_create_reference_set)
 export(sig_pairwise_similarity)
+export(sigminer2sigstory)
 importFrom(rlang,`%||%`)
