--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(parse_sig_files)
 export(sig_add_to_database)
+export(sig_analyse_cohort_from_files)
 export(sig_analyse_mutations)
 export(sig_analyse_mutations_single_sample_from_files)
 export(sig_create_database)
