--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,6 @@ export(sig_create_reference_set)
 export(sig_pairwise_similarity)
 export(sigminer2sigstory)
 importFrom(rlang,`%||%`)
+importFrom(stats,na.omit)
+importFrom(utils,read.csv)
+importFrom(utils,write.csv)
