docs: updated readme with ref-set creation
and improved ref-set creation info messages

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -14,3 +14,4 @@ sigminerUtils/inst/reference/
 pcawg_signature_results
 colo829_signature_results
 COLO829v003T.purple.somatic.vcf.gz
+pcawg_reference_set
