--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ my_sig_database.sqlite
 colo829_signature_results
 result_tree.rds
 pcawg_signature_results
-colo829_signature_results
+pcawg_reference_set
