fix: switched umap save to uwot::save_uwot
resolves issue #15

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -15,3 +15,4 @@ pcawg_signature_results
 colo829_signature_results
 COLO829v003T.purple.somatic.vcf.gz
 pcawg_reference_set
+colo829_signature_results_with_refset
