fix: R CMD check fixes
+ sigstory object creation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,10 @@ Imports:
     DBI,
     dplyr,
     future,
+    ggplot2,
     glue,
     lsa,
+    patchwork,
     purrr,
     R.utils,
     readr,
