--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -16,3 +16,4 @@ colo829_signature_results
 COLO829v003T.purple.somatic.vcf.gz
 pcawg_reference_set
 colo829_signature_results_with_refset
+^signatures$
